feat(groups): update group creation and update to support multiple trainers
